[gd_scene load_steps=9 format=3 uid="uid://csah6gt2cxydw"]

[ext_resource type="Script" path="res://Scripts/LevelEditor/LevelEditorRoot.gd" id="1_36q31"]
[ext_resource type="Script" path="res://Scripts/LevelEditor/LevelEditorManager.gd" id="1_khkxk"]
[ext_resource type="Script" path="res://Scripts/LevelEditor/MenuBarManager.gd" id="1_qgpt1"]
[ext_resource type="Script" path="res://Scripts/LevelEditor/LevelEditorCamera.gd" id="1_rf8o3"]
[ext_resource type="PackedScene" uid="uid://bvcgrab6m6yty" path="res://Scenes/TSCN/Levels/Editor/ObjectManipulator.tscn" id="4_1wxhk"]
[ext_resource type="Script" path="res://Scripts/LevelEditor/NodeRMBoxManager.gd" id="4_4qs7k"]
[ext_resource type="Script" path="res://Scripts/LevelEditor/SaverLoader.gd" id="5_t6rcf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31pjn"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
skew = Vector2(8.55e-05, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LevelEditorRoot" type="Node"]
process_mode = 3
script = ExtResource("1_khkxk")

[node name="LevelEditorUIGrid" type="GridContainer" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 1915.0
offset_bottom = 1075.0
script = ExtResource("1_36q31")
side_bar_node_tree = NodePath("HSplitContainer/SideBarLeftContainer/SideBarNodes/SideBarNodeTree")

[node name="SnappingPopup" type="PopupMenu" parent="LevelEditorUIGrid"]
size = Vector2i(100, 143)
hide_on_item_selection = false
hide_on_checkable_item_selection = false
system_menu_id = 3
item_count = 5
item_0/text = "4px"
item_0/checkable = 2
item_1/text = "8px"
item_1/checkable = 2
item_1/id = 1
item_2/text = "16px"
item_2/checkable = 2
item_2/id = 2
item_3/text = "32px"
item_3/checkable = 2
item_3/id = 3
item_4/text = "64px"
item_4/checkable = 2
item_4/id = 4

[node name="EntityImportFileDialog" type="FileDialog" parent="LevelEditorUIGrid"]
title = "Open a File"
position = Vector2i(815, 385)
size = Vector2i(500, 400)
popup_window = true
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn", "*.scn")

[node name="TileMapImportFileDialog" type="FileDialog" parent="LevelEditorUIGrid"]
auto_translate_mode = 1
title = "Open a File"
position = Vector2i(815, 385)
size = Vector2i(500, 400)
popup_window = true
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres", "*.res")

[node name="LevelSaveDialog" type="FileDialog" parent="LevelEditorUIGrid"]
auto_translate_mode = 1
title = "Open a File"
position = Vector2i(815, 385)
size = Vector2i(500, 400)
popup_window = true
ok_button_text = "Save"
filters = PackedStringArray("*.tscn", "*.scn")

[node name="LevelLoadDialog" type="FileDialog" parent="LevelEditorUIGrid"]
auto_translate_mode = 1
title = "Open a File"
position = Vector2i(815, 385)
size = Vector2i(500, 400)
popup_window = true
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json", "*.txt")

[node name="MenuBar" type="MenuBar" parent="LevelEditorUIGrid"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_qgpt1")
level_interface_viewport = NodePath("../HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport")
entity_tree_container = NodePath("../HSplitContainer/SideBarLeftContainer/SideBarObjects/Entity")
tilemap_tree_container = NodePath("../HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/TileMap")
static_tree_container = NodePath("../HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static")
saver_loader = NodePath("../../SaverLoader")
object_manipulator = NodePath("../HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport/ObjectManipulator")
select_level_popup = NodePath("../../SelectLevelPopup")

[node name="File" type="PopupMenu" parent="LevelEditorUIGrid/MenuBar"]
size = Vector2i(102, 116)
item_count = 4
item_0/text = "Save Level"
item_1/text = "Load Level"
item_1/id = 1
item_2/text = "New Level"
item_2/id = 2
item_3/text = "Levels List"
item_3/id = 3

[node name="TabBar" type="TabBar" parent="LevelEditorUIGrid"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0
tab_count = 1
tab_0/title = "Empty Level"

[node name="HSplitContainer" type="HSplitContainer" parent="LevelEditorUIGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -345

[node name="SideBarLeftContainer" type="VSplitContainer" parent="LevelEditorUIGrid/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SideBarNodes" type="VBoxContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SideBarNodeTreeLabel" type="Label" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes"]
layout_mode = 2
text = "Nodes"

[node name="Edit" type="PopupMenu" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes"]
size = Vector2i(167, 116)
item_count = 4
item_0/text = "Import Entity"
item_1/text = "Import TileMap"
item_1/id = 1
item_2/text = "Import Static Node"
item_2/id = 2
item_3/text = "Edit Snapping"
item_3/id = 3

[node name="SideBarNodeTree" type="Tree" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes"]
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="SideBarObjects" type="VSplitContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Entity" type="VBoxContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntityLabel" type="Label" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/Entity"]
layout_mode = 2
text = "Entities"

[node name="EntityNodes" type="ItemList" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/Entity"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeperatorTileMapStatic" type="VSplitContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects"]
layout_mode = 2
size_flags_vertical = 3

[node name="TileMap" type="VBoxContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic"]
layout_mode = 2
size_flags_vertical = 3

[node name="TileMapLabel" type="Label" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/TileMap"]
layout_mode = 2
text = "TileMaps (Currently cannot be edited using the level editor ... use Godot instead)"
clip_text = true

[node name="TileMapNodes" type="ItemList" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/TileMap"]
layout_mode = 2
size_flags_vertical = 3

[node name="Static" type="VBoxContainer" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic"]
layout_mode = 2
size_flags_vertical = 3

[node name="StaticLabel" type="Label" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static"]
layout_mode = 2
text = "Static"

[node name="StaticNodes" type="ItemList" parent="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="LevelEditorUIGrid/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelInterfaceContainer" type="SubViewportContainer" parent="LevelEditorUIGrid/HSplitContainer/Panel"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 1305.0
offset_bottom = 995.0
size_flags_horizontal = 3
stretch = true

[node name="LevelInterfaceViewport" type="SubViewport" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer"]
handle_input_locally = false
size = Vector2i(1300, 990)
render_target_update_mode = 4

[node name="LevelEditorCamera" type="Camera2D" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
script = ExtResource("1_rf8o3")
level_interface_viewport = NodePath("..")
entity_tree_container = NodePath("../../../../SideBarLeftContainer/SideBarObjects/Entity")
tilemap_tree_container = NodePath("../../../../SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/TileMap")
static_tree_container = NodePath("../../../../SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static")
side_bar_tree_container = NodePath("../../../../SideBarLeftContainer/SideBarNodes")
level_interface_node_container = NodePath("../LevelInterfaceNodesContainer")

[node name="LevelInterfaceNodesContainer" type="Node" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
process_mode = 1

[node name="ObjectManipulator" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport" instance=ExtResource("4_1wxhk")]
position = Vector2(31.25, -17.25)

[node name="XAxis" type="Line2D" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
points = PackedVector2Array(-100000, 0, 100000, 0)
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="XAxis2" type="Line2D" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
position = Vector2(0, 1080)
points = PackedVector2Array(0, 0, 1920, 0)
width = 2.0

[node name="YAxis" type="Line2D" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
points = PackedVector2Array(0, -100000, 0, 100000)
width = 5.0
default_color = Color(0, 1, 0, 1)

[node name="YAxis2" type="Line2D" parent="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport"]
position = Vector2(1920, 0)
points = PackedVector2Array(0, 0, 0, 1080)
width = 2.0

[node name="NodeRightClickBox" type="VBoxContainer" parent="."]
offset_left = -707.0
offset_top = 385.0
offset_right = -585.0
offset_bottom = 416.0
script = ExtResource("4_4qs7k")
side_bar_node_tree = NodePath("../LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes/SideBarNodeTree")
level_interface_container = NodePath("../LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport")

[node name="DeleteButton" type="Button" parent="NodeRightClickBox"]
layout_mode = 2
text = "Delete"

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("5_t6rcf")
level_interface_viewport = NodePath("../LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport")
entity_nodes = NodePath("../LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/Entity/EntityNodes")
tilemap_nodes = NodePath("../LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/TileMap/TileMapNodes")
static_nodes = NodePath("../LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static/StaticNodes")
node_tree = NodePath("../LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes/SideBarNodeTree")
tab_bar = NodePath("../LevelEditorUIGrid/TabBar")

[node name="SelectLevelPopup" type="Window" parent="."]
position = Vector2i(536, 236)
size = Vector2i(800, 400)
exclusive = true
unresizable = true
always_on_top = true
popup_window = true

[node name="AddLevelButton" type="Button" parent="SelectLevelPopup"]
offset_left = 707.0
offset_top = 5.0
offset_right = 787.0
offset_bottom = 25.0
size_flags_horizontal = 8
text = "Add Level"

[node name="Title" type="Label" parent="SelectLevelPopup"]
offset_left = 7.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 31.0
text = "Levels List
"

[node name="ListBG" type="Panel" parent="SelectLevelPopup"]
offset_left = 5.0
offset_top = 40.0
offset_right = 795.0
offset_bottom = 395.0
theme_override_styles/panel = SubResource("StyleBoxFlat_31pjn")

[node name="LevelsList" type="VBoxContainer" parent="SelectLevelPopup"]
offset_left = 15.0
offset_top = 47.0
offset_right = 787.0
offset_bottom = 447.0

[node name="TemplateLevelBox" type="HBoxContainer" parent="SelectLevelPopup/LevelsList"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="SelectLevelPopup/LevelsList/TemplateLevelBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.75
text = "Level Name Here"

[node name="Path" type="Label" parent="SelectLevelPopup/LevelsList/TemplateLevelBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.8
text = "Level Path Here"
clip_text = true

[node name="LoadButton" type="Button" parent="SelectLevelPopup/LevelsList/TemplateLevelBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="LevelsListAddLevelFileDialog" type="FileDialog" parent="SelectLevelPopup"]
title = "Open a File"
position = Vector2i(615, 296)
size = Vector2i(600, 400)
popup_window = true
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json", "*.txt")

[connection signal="id_pressed" from="LevelEditorUIGrid/SnappingPopup" to="LevelEditorUIGrid/MenuBar" method="_on_snapping_popup_id_pressed"]
[connection signal="file_selected" from="LevelEditorUIGrid/EntityImportFileDialog" to="LevelEditorUIGrid/MenuBar" method="_on_entity_import_file_dialog_file_selected"]
[connection signal="file_selected" from="LevelEditorUIGrid/TileMapImportFileDialog" to="LevelEditorUIGrid/MenuBar" method="_on_entity_import_file_dialog_file_selected"]
[connection signal="file_selected" from="LevelEditorUIGrid/LevelSaveDialog" to="LevelEditorUIGrid/MenuBar" method="_on_level_save_dialog_file_selected"]
[connection signal="file_selected" from="LevelEditorUIGrid/LevelLoadDialog" to="SaverLoader" method="load_level"]
[connection signal="id_pressed" from="LevelEditorUIGrid/MenuBar/File" to="LevelEditorUIGrid/MenuBar" method="_on_file_id_pressed"]
[connection signal="tab_changed" from="LevelEditorUIGrid/TabBar" to="LevelEditorUIGrid/MenuBar" method="_on_tab_bar_tab_changed"]
[connection signal="tab_close_pressed" from="LevelEditorUIGrid/TabBar" to="LevelEditorUIGrid/MenuBar" method="_on_tab_bar_tab_close_pressed"]
[connection signal="id_pressed" from="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes/Edit" to="LevelEditorUIGrid/MenuBar" method="_on_edit_id_pressed"]
[connection signal="item_mouse_selected" from="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes/SideBarNodeTree" to="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport/LevelEditorCamera" method="_on_side_bar_node_tree_item_mouse_selected"]
[connection signal="item_mouse_selected" from="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarNodes/SideBarNodeTree" to="NodeRightClickBox" method="_on_side_bar_node_tree_item_mouse_selected"]
[connection signal="item_activated" from="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/Entity/EntityNodes" to="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport/LevelEditorCamera" method="_on_entity_nodes_item_activated"]
[connection signal="item_activated" from="LevelEditorUIGrid/HSplitContainer/SideBarLeftContainer/SideBarObjects/SeperatorTileMapStatic/Static/StaticNodes" to="LevelEditorUIGrid/HSplitContainer/Panel/LevelInterfaceContainer/LevelInterfaceViewport/LevelEditorCamera" method="_on_static_nodes_item_activated"]
[connection signal="button_up" from="NodeRightClickBox/DeleteButton" to="NodeRightClickBox" method="_on_delete_button_button_up"]
[connection signal="close_requested" from="SelectLevelPopup" to="." method="_on_window_close_requested"]
[connection signal="button_up" from="SelectLevelPopup/AddLevelButton" to="." method="_on_add_level_button_button_up"]
[connection signal="file_selected" from="SelectLevelPopup/LevelsListAddLevelFileDialog" to="." method="_on_levels_list_add_level_file_dialog_file_selected"]
